syntax = "proto3";

package proto;

option go_package = "md_server/proto;proto";
option java_multiple_files = true;
option java_package = "proto";

service Hello {
	//普通rpc调用
	rpc SayHello (HelloRequest) returns (HelloReply);
	//双向流式rpc调用
	rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply);
}

message HelloRequest {
	string name = 1;
}
message HelloReply {
	string reply = 1;
}
